# trabalho-grafos-DCC059

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  auxiliar_grafo.h  grafo.h  grafo_filho.h  grafo_lista.cpp  grafo_lista.h  grafo_matriz.cpp  grafo_matriz.h  grafo_pai.h  lista_encadeada.h  main.cpp
entradas/: CA-CondMat.txt  CA-HepPh.txt  com-amazon.md  com-friendster.md  com-lj.md  com-orkut.md  com-youtube.md  grafo-teste.txt  grafo.txt  grafo.txt-sanitizado.txt  roadNet-Ca.md  roadNet-PA.md  roadNet-TX.md  web-berk.md  web-google.md
include/: algoritmo_guloso.h  algoritmo_randomizado.h  algoritmo_relativo.h  aresta.h  comunidade.h  grafo.h  grafo_filho.h  grafo_lista.h  grafo_matriz.h  grafo_pai.h  leitura.h  lista_encadeada.h  no.h  vetor.h
src/: algoritmo_guloso.cpp  algoritmo_randomizado.cpp  algoritmo_relativo.cpp  comunidade.cpp  grafo.cpp  grafo_lista.cpp  grafo_matriz.cpp  leitura.cpp  sanitizador.cpp
